[tool.poetry]
name = "rdf_cty_ccy"
version = "0.1.1"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
simple-memory-cache = "^1.0.0"
attrs = "^21.4.0"
PyMonad = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
