[tool.poetry]
name = "rdf_cty_ccy"
version = "0.1.6"
description = "Provides the FIBO and OMG Country and Currency Ontology in a queryable form."
authors = ["Col Perks <wild.fauve@gmail.com>"]
repository = 'https://github.com/wildfauve/rdf_cty_ccy'
readme = 'README.md'

[tool.poetry.scripts]
build_onto = "rdf_cty_ccy.common.build_onto:builder"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
simple-memory-cache = "^1.0.0"
PyMonad = "^2.4.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
